--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   build:
     name: Build distribution 📦
-    if: startsWith(github.ref, 'refs/tags/') && github.repository == 'rbuehler/vasca'
     runs-on: ubuntu-latest
     
     steps:
@@ -42,6 +41,7 @@ jobs:
       Publish Python 🐍 distribution 📦 to PyPI
     needs:
       - build
+    if: startsWith(github.ref, 'refs/tags/') && github.repository == 'rbuehler/vasca'
     runs-on: ubuntu-latest
     
     environment:
@@ -128,6 +128,7 @@ jobs:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
     needs:
       - build
+    if: github.repository == 'rbuehler/vasca'
     runs-on: ubuntu-latest
     
     environment:
