--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools-scm>=8"]
-#build-backend = "setuptools.build_meta"
+requires = ["setuptools", "setuptools-scm", "wheel", "build"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "vasca"
@@ -8,7 +8,7 @@ dynamic = ["version"]
 description = "Ultraviolet Variability Analysis is an astronomy pipeline for time-variable sources."
 readme = "README.md"
 requires-python = ">=3.10"
-license = {file = "LICENSE.txt"}
+license = {file = "LICENSE"}
 keywords = ["astronomy", "ultraviolet", "pipeline"]
 authors = [
     {name = "Julian Schliwinski", email = "julian.schliwinski@desy.de"},
@@ -49,7 +49,6 @@ changelog = "https://tbd.desy.de"
 vasca_pipe = "vasca.vasca_pipe:run_from_file"
 
 [tool.setuptools]
-packages = ["vasca"]
 
 [tool.setuptools_scm]
 write_to = "vasca/_version.py"
