--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -61,6 +61,7 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         packages-dir: dist/
+        verbose: true
   
   github-release:
     name: >-
@@ -146,3 +147,4 @@ jobs:
       with:
         repository-url: https://test.pypi.org/legacy/
         packages_dir: dist/
+        verbose: true
