--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -26,7 +26,7 @@ jobs:
         --user
 
     - name: Allow local version
-      if: ! startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/') != true
       run: |
         echo 'local_scheme = "no-local-version"' >> pyproject.toml
         git update-index --assume-unchanged pyproject.toml
