--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -43,6 +43,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .
+          cat vasca/_version.py
+          git describe
 
       - name: Build Sphinx documentation
         run: sphinx-build docs docs/_build
