🐛BUG: debugging Jupyter kernels

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -47,6 +47,10 @@ jobs:
           pip install .
           cat vasca/_version.py
           git describe
+          python -m ipykernel install --user --name <vasca-github> --display-name "<vasca-github>"
+          jupyter kernelspec list
+
+
 
       - name: Build Sphinx documentation
         run: sphinx-build docs docs/_build
