--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,14 @@
 name: 📚 docs
 on:
   workflow_run:
-    # workflows: ["🧪 pytest"]
+    workflows: ["🧪 pytest"]
     branches:
       - main
     types:
       - completed
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
