--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,11 @@
 name: 📚 docs
 on:
-  workflow_run:
-    workflows: ["🧪 pytest"]
-    branches:
-      - main
-    types:
-      - completed
+  # workflow_run:
+  #   workflows: ["🧪 pytest"]
+  #   branches:
+  #     - main
+  #   types:
+  #     - completed
   push:
     branches:
       - main
