🛠MAINTENANCE: Removed project field from resource manager and changed environment variable

--- a/vasca/resource_metadata/resource_catalog.yml
+++ b/vasca/resource_metadata/resource_catalog.yml
@@ -5,12 +5,9 @@
 # <storage>: handle to call the storage system
 #   |___ <resource ID>: unique identifier of the resource item.
 #           |           IDs must be integers sequentially incremented from 0
-#           |___ name: handle to call the resource 
+#           |___ name: handle to call the resource (must be unique per storage system)
 #           |___ description: string to clarify the resource's context 
 #           |___ type: either "file" or "directory"
-#           |___ project: exact name of the synced project directory
-#           |             e.g. in the case of SAS cloud the remote file path con be constructed like this:
-#           |             /ULTRASAT-data/uc_science/<project>/<path>
 #           |___ path: the path to the resource file relative to the synced directory
 #
 sas_cloud:
@@ -18,25 +15,21 @@ sas_cloud:
         name: gal_visits_list
         description: 'Complete list of all GALEX visits with NUV exposure.'
         type: file
-        project: vascarcat
         path: /GALEX_visits_list/GALEX_visits_list_qualvars.fits
     1:
         name: gal_fields
         description: 'Collection of GALEX dataproducts for fileds of interest.'
         type: directory
-        project: vascarcat
         path: /GALEX_fields
     2:
         name: gal_gphoton
         description: 'Collection of GALEX gphoton runs.'
         type: directory
-        project: vascarcat
         path: /GALEX_gPhoton
     3:
         name: gal_visits_list_qualsel
         description: 'Complete list of all GALEX visits.'
         type: file
-        project: vascarcat
         path: /GALEX_visits_list/GALEX_visits_list_qualsel.fits
     
 lustre:
@@ -44,24 +37,30 @@ lustre:
         name: gal_ds_visits_list
         description: 'Complete list of all GALEX drift-scan visits.'
         type: file
-        project: vascarcat
         path: /GALEX_DS_GCK_visits_list/GALEX_DS_GCK_visits_list.fits
     1:
         name: gal_ds_fields
         description: 'Collection of GALEX drift scan dataproducts'
         type: directory
-        project: vascarcat
         path: /GALEX_DS_GCK_fields
     2:
         name: gal_gphoton
         description: 'Collection of GALEX gphoton runs.'
         type: directory
-        project: vascarcat
         path: /GALEX_gPhoton
 vasca:
     0:
         name: test_resources
         description: 'Data used for VASCA development'
         type: directory
-        project: vasca
         path: '/vasca/test/resources'
+    1:
+        name: gal_visits_list
+        description: 'Complete list of all GALEX visits with NUV exposure.'
+        type: file
+        path: '/vasca/test/resources/GALEX_visits_list.fits'
+    2:
+        name: docs_resources
+        description: 'Data used for VASCA documentation'
+        type: directory
+        path: '/docs/tutorial_resources'
