--- a/.env_template
+++ b/.env_template
@@ -1,8 +1,17 @@
-# Location of Sync&Share directory "ULTRASAT-data/uc_science/vascarcat"
-UC_SAS_VASCARCAT="local_path/to/synced/sas/cloud/folders/vascarcat"
+# These are the required environment variables used in VASCA.
 
-# Place holder for future use of the LUSTRE storage system
+# Before running VASCA for the first time, create an .env file and paste the content
+# below. Then set the absolute path of this package's directory under VASCA_DEFAULT. If
+# you plan on running the pipeline with existing functionality for the GALEX data,
+# also set the path under UC_SAS_VASCARCAT
+
+# Copy and paste everything below this line into the .env file --------------------------
+
+# VASCA default, path to the root directory of VASCA, required to run VASCA
+VASCA_DEFAULT = "/dev/null"
+
+# DESY Sync & Share (NextCloud)
+UC_SAS_VASCARCAT="/dev/null"
+
+# DESY LUSTRE storage system
 UC_LUSTRE_VASCARCAT="/dev/null"
-
-# VASCA testing resources
-UC_VASCA_TEST_RESOURCES = "."
