--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo -e "UC_SAS_VASCARCAT='/dev/null'\nUC_LUSTRE_VASCARCAT='/dev/null'\nUC_VASCA_TEST_RESOURCES='.'" > .env
+          echo -e "VASCA_DEFAULT='$(pwd)'\nUC_SAS_VASCARCAT='/dev/null'\nUC_LUSTRE_VASCARCAT='/dev/null'" > .env
 
       - name: Run tests with coverage
         run: pytest -rP -v --cov=vasca --cov-report=xml
